kubernetes/apps/cilium/networkpolicies/egress-nodes.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-nodes
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-nodes: "true"
  egress:
    - toEntities:
        - host
        - remote-node
