kubernetes/apps/cilium/networkpolicies/ingress-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-namespace
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/ingress-namespace: "true"
  ingress:
    - fromEndpoints:
        - {}
