kubernetes/apps/cilium/networkpolicies/ingress-nodes.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-nodes
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/ingress-nodes: "true"
  ingress:
    - fromEntities:
        - host
        - remote-node
